# Chatbot_de24

./: .gitignore  README.md  api.py  app.py  dockerfile.dashboard  explorations.ipynb  function_app.py  ingestion.py  md_to_text.py  pyproject.toml  requirements.txt
backend/: constants.py  data_models.py  ingestion.py  md_to_text.py  rag.py
data/: an introduction to the vector database lancedb.txt  api trafiklab.txt  azure static web app deploy react app.txt  chat with your excel data - xlwings lite (1).txt  course structure for azure two weeks course.txt  data platform course structure.txt  data processing course  structure.txt  data storytelling.txt  dbt modeling snowflake.txt  docker setup windows.txt  fastapi and scikit-learn api connect to streamlit frontend.txt  fastapi crud app.txt  hands on regularization.txt  how does llm work_.txt  logistic regression hands on with scikit learn.txt  logistic regression theory.txt  modern data stack - deploy dockerized dashboard into azure web app.txt  modern data stack - dockerize your data pipeline.txt  modern data stack - using dlt to extract and load api data to snowflake.txt  packaging in python.txt  pandas_read_excel.txt  postgres sink.txt  pydantic fundamentals.txt  pydantic with gemini to structure output in a much neater way.txt  pydanticai chatbot.txt  pydanticai fundamentals - outputting structured pydantic model.txt  pytest unit testing.txt  python fundamentals.txt  python intro.txt  python_oop_1.txt  serving pydanticai gemini model with fastapi tutorial (1).txt  sql analytics course with duckdb - joins concepts.txt  (+15 more)
(+115 files in other folders)
